syntax = "proto3";

package hellomall.userbase;

service UserBase {
	rpc GetUserBaseInfo(Request) returns (Response) {}
}

message Request {
	int64 user_id = 1;
}

message Response {
    int32  errno = 1;
    string errmsg = 2;
    optional UserBaseInfo user_base_info = 3;
}

message UserBaseInfo {
    int64 user_id = 1;
	string user_name = 2;
	int32 sex   = 3;
	string real_user_name = 4;
	string phone = 5;
    string email = 6;
}